src/main/java/org/karina/lang/compiler/jvm/signature/gen/SignatureParser.java
// Generated from C:/Users/Morit/Documents/Projects/Java/ttyl/resources/grammar/signature/Signature.g4 by ANTLR 4.13.2
package org.karina.lang.compiler.jvm.signature.gen;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class SignatureParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, V=14, T=15, L=16, B=17, C=18, D=19, 
		F=20, I=21, J=22, S=23, Z=24, NormalStart=25, NormalRest=26;
	public static final int
		RULE_fieldTypeSignature = 0, RULE_classSignature = 1, RULE_methodTypeSignature = 2, 
		RULE_formalTypeParameters = 3, RULE_formalTypeParameter = 4, RULE_classBound = 5, 
		RULE_interfaceBound = 6, RULE_superclassSignature = 7, RULE_superinterfaceSignature = 8, 
		RULE_fieldTypeSignatureInner = 9, RULE_classTypeSignature = 10, RULE_packageSpecifier = 11, 
		RULE_simpleClassTypeSignature = 12, RULE_classTypeSignatureSuffix = 13, 
		RULE_typeVariableSignature = 14, RULE_typeArguments = 15, RULE_typeArgument = 16, 
		RULE_wildcardIndicator = 17, RULE_arrayTypeSignature = 18, RULE_typeSignature = 19, 
		RULE_returnType = 20, RULE_throwsSignature = 21, RULE_baseType = 22, RULE_identifier = 23;
	private static String[] makeRuleNames() {
		return new String[] {
			"fieldTypeSignature", "classSignature", "methodTypeSignature", "formalTypeParameters", 
			"formalTypeParameter", "classBound", "interfaceBound", "superclassSignature", 
			"superinterfaceSignature", "fieldTypeSignatureInner", "classTypeSignature", 
			"packageSpecifier", "simpleClassTypeSignature", "classTypeSignatureSuffix", 
			"typeVariableSignature", "typeArguments", "typeArgument", "wildcardIndicator", 
			"arrayTypeSignature", "typeSignature", "returnType", "throwsSignature", 
			"baseType", "identifier"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'('", "')'", "'<'", "'>'", "':'", "';'", "'/'", "'.'", "'*'", 
			"'+'", "'-'", "'['", "'^'", "'V'", "'T'", "'L'", "'B'", "'C'", "'D'", 
			"'F'", "'I'", "'J'", "'S'", "'Z'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, "V", "T", "L", "B", "C", "D", "F", "I", "J", "S", "Z", "NormalStart", 
			"NormalRest"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Signature.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SignatureParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FieldTypeSignatureContext extends ParserRuleContext {
		public FieldTypeSignatureInnerContext fieldTypeSignatureInner() {
			return getRuleContext(FieldTypeSignatureInnerContext.class,0);
		}
		public TerminalNode EOF() { return getToken(SignatureParser.EOF, 0); }
		public FieldTypeSignatureContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fieldTypeSignature; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SignatureListener ) ((SignatureListener)listener).enterFieldTypeSignature(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SignatureListener ) ((SignatureListener)listener).exitFieldTypeSignature(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SignatureVisitor ) return ((SignatureVisitor<? extends T>)visitor).visitFieldTypeSignature(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FieldTypeSignatureContext fieldTypeSignature() throws RecognitionException {
		FieldTypeSignatureContext _localctx = new FieldTypeSignatureContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_fieldTypeSignature);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(48);
			fieldTypeSignatureInner();
			setState(49);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ClassSignatureContext extends ParserRuleContext {
		public SuperclassSignatureContext superclassSignature() {
			return getRuleContext(SuperclassSignatureContext.class,0);
		}
		public TerminalNode EOF() { return getToken(SignatureParser.EOF, 0); }
		public FormalTypeParametersContext formalTypeParameters() {
			return getRuleContext(FormalTypeParametersContext.class,0);
		}
		public List<SuperinterfaceSignatureContext> superinterfaceSignature() {
			return getRuleContexts(SuperinterfaceSignatureContext.class);
		}
		public SuperinterfaceSignatureContext superinterfaceSignature(int i) {
			return getRuleContext(SuperinterfaceSignatureContext.class,i);
		}
		public ClassSignatureContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classSignature; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SignatureListener ) ((SignatureListener)listener).enterClassSignature(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SignatureListener ) ((SignatureListener)listener).exitClassSignature(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SignatureVisitor ) return ((SignatureVisitor<? extends T>)visitor).visitClassSignature(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassSignatureContext classSignature() throws RecognitionException {
		ClassSignatureContext _localctx = new ClassSignatureContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_classSignature);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(52);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__2) {
				{
				setState(51);
				formalTypeParameters();
				}
			}

			setState(54);
			superclassSignature();
			setState(58);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==L) {
				{
				{
				setState(55);
				superinterfaceSignature();
				}
				}
				setState(60);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(61);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MethodTypeSignatureContext extends ParserRuleContext {
		public ReturnTypeContext returnType() {
			return getRuleContext(ReturnTypeContext.class,0);
		}
		public TerminalNode EOF() { return getToken(SignatureParser.EOF, 0); }
		public FormalTypeParametersContext formalTypeParameters() {
			return getRuleContext(FormalTypeParametersContext.class,0);
		}
		public List<TypeSignatureContext> typeSignature() {
			return getRuleContexts(TypeSignatureContext.class);
		}
		public TypeSignatureContext typeSignature(int i) {
			return getRuleContext(TypeSignatureContext.class,i);
		}
		public List<ThrowsSignatureContext> throwsSignature() {
			return getRuleContexts(ThrowsSignatureContext.class);
		}
		public ThrowsSignatureContext throwsSignature(int i) {
			return getRuleContext(ThrowsSignatureContext.class,i);
		}
		public MethodTypeSignatureContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_methodTypeSignature; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SignatureListener ) ((SignatureListener)listener).enterMethodTypeSignature(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SignatureListener ) ((SignatureListener)listener).exitMethodTypeSignature(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SignatureVisitor ) return ((SignatureVisitor<? extends T>)visitor).visitMethodTypeSignature(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MethodTypeSignatureContext methodTypeSignature() throws RecognitionException {
		MethodTypeSignatureContext _localctx = new MethodTypeSignatureContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_methodTypeSignature);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(64);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__2) {
				{
				setState(63);
				formalTypeParameters();
				}
			}

			setState(66);
			match(T__0);
			setState(70);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 33525760L) != 0)) {
				{
				{
				setState(67);
				typeSignature();
				}
				}
				setState(72);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(73);
			match(T__1);
			setState(74);
			returnType();
			setState(78);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__12) {
				{
				{
				setState(75);
				throwsSignature();
				}
				}
				setState(80);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(81);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FormalTypeParametersContext extends ParserRuleContext {
		public List<FormalTypeParameterContext> formalTypeParameter() {
			return getRuleContexts(FormalTypeParameterContext.class);
		}
		public FormalTypeParameterContext formalTypeParameter(int i) {
			return getRuleContext(FormalTypeParameterContext.class,i);
		}
		public FormalTypeParametersContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_formalTypeParameters; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SignatureListener ) ((SignatureListener)listener).enterFormalTypeParameters(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SignatureListener ) ((SignatureListener)listener).exitFormalTypeParameters(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SignatureVisitor ) return ((SignatureVisitor<? extends T>)visitor).visitFormalTypeParameters(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FormalTypeParametersContext formalTypeParameters() throws RecognitionException {
		FormalTypeParametersContext _localctx = new FormalTypeParametersContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_formalTypeParameters);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			match(T__2);
			setState(85); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(84);
				formalTypeParameter();
				}
				}
				setState(87); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 67092480L) != 0) );
			setState(89);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FormalTypeParameterContext extends ParserRuleContext {
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public ClassBoundContext classBound() {
			return getRuleContext(ClassBoundContext.class,0);
		}
		public List<InterfaceBoundContext> interfaceBound() {
			return getRuleContexts(InterfaceBoundContext.class);
		}
		public InterfaceBoundContext interfaceBound(int i) {
			return getRuleContext(InterfaceBoundContext.class,i);
		}
		public FormalTypeParameterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_formalTypeParameter; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SignatureListener ) ((SignatureListener)listener).enterFormalTypeParameter(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SignatureListener ) ((SignatureListener)listener).exitFormalTypeParameter(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SignatureVisitor ) return ((SignatureVisitor<? extends T>)visitor).visitFormalTypeParameter(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FormalTypeParameterContext formalTypeParameter() throws RecognitionException {
		FormalTypeParameterContext _localctx = new FormalTypeParameterContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_formalTypeParameter);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			identifier();
			setState(92);
			classBound();
			setState(96);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__4) {
				{
				{
				setState(93);
				interfaceBound();
				}
				}
				setState(98);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ClassBoundContext extends ParserRuleContext {
		public FieldTypeSignatureInnerContext fieldTypeSignatureInner() {
			return getRuleContext(FieldTypeSignatureInnerContext.class,0);
		}
		public ClassBoundContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classBound; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SignatureListener ) ((SignatureListener)listener).enterClassBound(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SignatureListener ) ((SignatureListener)listener).exitClassBound(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SignatureVisitor ) return ((SignatureVisitor<? extends T>)visitor).visitClassBound(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassBoundContext classBound() throws RecognitionException {
		ClassBoundContext _localctx = new ClassBoundContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_classBound);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			match(T__4);
			setState(101);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				{
				setState(100);
				fieldTypeSignatureInner();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InterfaceBoundContext extends ParserRuleContext {
		public FieldTypeSignatureInnerContext fieldTypeSignatureInner() {
			return getRuleContext(FieldTypeSignatureInnerContext.class,0);
		}
		public InterfaceBoundContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_interfaceBound; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SignatureListener ) ((SignatureListener)listener).enterInterfaceBound(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SignatureListener ) ((SignatureListener)listener).exitInterfaceBound(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SignatureVisitor ) return ((SignatureVisitor<? extends T>)visitor).visitInterfaceBound(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InterfaceBoundContext interfaceBound() throws RecognitionException {
		InterfaceBoundContext _localctx = new InterfaceBoundContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_interfaceBound);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			match(T__4);
			setState(104);
			fieldTypeSignatureInner();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SuperclassSignatureContext extends ParserRuleContext {
		public ClassTypeSignatureContext classTypeSignature() {
			return getRuleContext(ClassTypeSignatureContext.class,0);
		}
		public SuperclassSignatureContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_superclassSignature; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SignatureListener ) ((SignatureListener)listener).enterSuperclassSignature(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SignatureListener ) ((SignatureListener)listener).exitSuperclassSignature(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SignatureVisitor ) return ((SignatureVisitor<? extends T>)visitor).visitSuperclassSignature(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SuperclassSignatureContext superclassSignature() throws RecognitionException {
		SuperclassSignatureContext _localctx = new SuperclassSignatureContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_superclassSignature);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			classTypeSignature();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SuperinterfaceSignatureContext extends ParserRuleContext {
		public ClassTypeSignatureContext classTypeSignature() {
			return getRuleContext(ClassTypeSignatureContext.class,0);
		}
		public SuperinterfaceSignatureContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_superinterfaceSignature; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SignatureListener ) ((SignatureListener)listener).enterSuperinterfaceSignature(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SignatureListener ) ((SignatureListener)listener).exitSuperinterfaceSignature(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SignatureVisitor ) return ((SignatureVisitor<? extends T>)visitor).visitSuperinterfaceSignature(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SuperinterfaceSignatureContext superinterfaceSignature() throws RecognitionException {
		SuperinterfaceSignatureContext _localctx = new SuperinterfaceSignatureContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_superinterfaceSignature);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			classTypeSignature();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FieldTypeSignatureInnerContext extends ParserRuleContext {
		public ClassTypeSignatureContext classTypeSignature() {
			return getRuleContext(ClassTypeSignatureContext.class,0);
		}
		public ArrayTypeSignatureContext arrayTypeSignature() {
			return getRuleContext(ArrayTypeSignatureContext.class,0);
		}
		public TypeVariableSignatureContext typeVariableSignature() {
			return getRuleContext(TypeVariableSignatureContext.class,0);
		}
		public FieldTypeSignatureInnerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fieldTypeSignatureInner; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SignatureListener ) ((SignatureListener)listener).enterFieldTypeSignatureInner(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SignatureListener ) ((SignatureListener)listener).exitFieldTypeSignatureInner(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SignatureVisitor ) return ((SignatureVisitor<? extends T>)visitor).visitFieldTypeSignatureInner(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FieldTypeSignatureInnerContext fieldTypeSignatureInner() throws RecognitionException {
		FieldTypeSignatureInnerContext _localctx = new FieldTypeSignatureInnerContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_fieldTypeSignatureInner);
		try {
			setState(113);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case L:
				enterOuterAlt(_localctx, 1);
				{
				setState(110);
				classTypeSignature();
				}
				break;
			case T__11:
				enterOuterAlt(_localctx, 2);
				{
				setState(111);
				arrayTypeSignature();
				}
				break;
			case T:
				enterOuterAlt(_localctx, 3);
				{
				setState(112);
				typeVariableSignature();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ClassTypeSignatureContext extends ParserRuleContext {
		public TerminalNode L() { return getToken(SignatureParser.L, 0); }
		public SimpleClassTypeSignatureContext simpleClassTypeSignature() {
			return getRuleContext(SimpleClassTypeSignatureContext.class,0);
		}
		public PackageSpecifierContext packageSpecifier() {
			return getRuleContext(PackageSpecifierContext.class,0);
		}
		public List<ClassTypeSignatureSuffixContext> classTypeSignatureSuffix() {
			return getRuleContexts(ClassTypeSignatureSuffixContext.class);
		}
		public ClassTypeSignatureSuffixContext classTypeSignatureSuffix(int i) {
			return getRuleContext(ClassTypeSignatureSuffixContext.class,i);
		}
		public ClassTypeSignatureContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classTypeSignature; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SignatureListener ) ((SignatureListener)listener).enterClassTypeSignature(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SignatureListener ) ((SignatureListener)listener).exitClassTypeSignature(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SignatureVisitor ) return ((SignatureVisitor<? extends T>)visitor).visitClassTypeSignature(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassTypeSignatureContext classTypeSignature() throws RecognitionException {
		ClassTypeSignatureContext _localctx = new ClassTypeSignatureContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_classTypeSignature);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			match(L);
			setState(117);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				{
				setState(116);
				packageSpecifier();
				}
				break;
			}
			setState(119);
			simpleClassTypeSignature();
			setState(123);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__7) {
				{
				{
				setState(120);
				classTypeSignatureSuffix();
				}
				}
				setState(125);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(126);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PackageSpecifierContext extends ParserRuleContext {
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public List<PackageSpecifierContext> packageSpecifier() {
			return getRuleContexts(PackageSpecifierContext.class);
		}
		public PackageSpecifierContext packageSpecifier(int i) {
			return getRuleContext(PackageSpecifierContext.class,i);
		}
		public PackageSpecifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_packageSpecifier; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SignatureListener ) ((SignatureListener)listener).enterPackageSpecifier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SignatureListener ) ((SignatureListener)listener).exitPackageSpecifier(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SignatureVisitor ) return ((SignatureVisitor<? extends T>)visitor).visitPackageSpecifier(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PackageSpecifierContext packageSpecifier() throws RecognitionException {
		PackageSpecifierContext _localctx = new PackageSpecifierContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_packageSpecifier);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(128);
			identifier();
			setState(129);
			match(T__6);
			setState(133);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(130);
					packageSpecifier();
					}
					} 
				}
				setState(135);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SimpleClassTypeSignatureContext extends ParserRuleContext {
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TypeArgumentsContext typeArguments() {
			return getRuleContext(TypeArgumentsContext.class,0);
		}
		public SimpleClassTypeSignatureContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_simpleClassTypeSignature; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SignatureListener ) ((SignatureListener)listener).enterSimpleClassTypeSignature(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SignatureListener ) ((SignatureListener)listener).exitSimpleClassTypeSignature(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SignatureVisitor ) return ((SignatureVisitor<? extends T>)visitor).visitSimpleClassTypeSignature(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SimpleClassTypeSignatureContext simpleClassTypeSignature() throws RecognitionException {
		SimpleClassTypeSignatureContext _localctx = new SimpleClassTypeSignatureContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_simpleClassTypeSignature);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136);
			identifier();
			setState(138);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__2) {
				{
				setState(137);
				typeArguments();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
